--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     git \
-    && docker-php-ext-install pdo pdo_sqlite
+    && docker-php-ext-install pdo pdo_sqlite 
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -15,19 +15,27 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Set working directory
 WORKDIR /var/www/html
 
-# Copy existing application directory contents
+# Copy Laravel framework files required for composer install
 COPY . .
 
-# Set correct permissions
-RUN chown -R www-data:www-data /var/www/html
+# Ensure artisan file is executable
+RUN chmod +x artisan
+
+RUN composer update --ignore-platform-req=ext-xml
 
 # Install Laravel dependencies
 RUN composer install --no-interaction --no-progress --prefer-dist
 
+# Copy the rest of the application
+COPY . .
+
+# Set correct permissions for Laravel
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/.
+
 # Ensure SQLite database file exists
-RUN touch database/database.sqlite && chmod 777 database/database.sqlite
+RUN mkdir -p database && touch database/database.sqlite && chmod 777 database/database.sqlite
 
 # Expose port 8000 and start Laravel's built-in server
 EXPOSE 8000
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
-RUN php artisan migrate
